2006-03-23  Senganal T  <tsenganal@novell.com>

	* DataTable.cs : 
		- LoadDataRow : Add the row to the indexes, when loading a new row.

2006-03-22  Senganal T  <tsenganal@novell.com>

	* DataTable.cs :
		- PrimaryKey : Set the IsPrimaryKey attribute before Removing from collection.
		- RemoveUniqueConstraints : Removed. dead code.
	* DataColumn.cs :
		- Unique : 
			- If adding/removing constraint fails, retain Unique value
			- Remove redundant code
	* UniqueConstraint.cs :
		- SetIsPrimaryKey : Added. Sets the value of IsPrimaryKey.
		- RemoveFromConstraintCollectionCleanup : If constraint is on a single column, then
		set Unique for that column to false.
		- CanRemoveFromCollection : Do not remove constraint, if its a PrimaryKey

2006-03-20  Senganal T  <tsenganal@novell.com>

	* DataSet.cs :
		- CopyRelations () : When copying the relation, do not add constraints
		automatically for the relation.
		- OnMergeFailed () : If merge fails and no handler is set for the MergeFailedEvent,
		then throw DataException 
	* ConstraintCollection.cs :
		- Add () : Check if a constraint already exists on the Columns that are being 
		constrained.
		- IndexOf () : Do not check for equivalent constraints, check for the exact instance.
	* MergeManager.cs (): 
		-  AdjustSchema () : 
			- Handle the MissingSchemaAction.Error case, 
			- Do not create constraints when mergin the DataRelation
			- Follow the semantics for schema merge/validation  when constraints are already present
			in the target DataSet.
		- AdjustPrimaryKeys () :
			- Code cleanup
			- Verify Order of Columns in the PrimaryKey when merging.
		- ResolveColumns : Changed the arument to DataSet. Simplifies code elsewhere.
		- CompareColumnArrays, CompareColumnArrays : Helper funtions.
		
2006-03-09  Senganal T  <tsenganal@novell.com>

	* DataRow.cs :
		- RejectChanges () :  Add the row to index, if it was in deleted state and
		Update the index if in Modified State.